--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-    
+    <div id="middle">
+        <h1>Recipes</h1>
+    </div>
+    <div>
+        <a href="pages/cake.html">
+            <img src="images/cake.jpg" width="500" height="500">
+        </a>
+        <a href="pages/noodles.html" >
+            <img src="images/noodles.jpg" width="500" height="500">
+        </a>
+    </div>
 </body>
 </html>
