Update index location

--- a/Recipe/pages/noodles.html
+++ b/Recipe/pages/noodles.html
@@ -96,6 +96,6 @@
         Return to Top
     </a>
     <br>
-    <a href="../index.html">Return to Home</a>
+    <a href="../../index.html">Return to Home</a>
 </body>
 </html>
