--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Recipes</h1>
     </div>
     <div>
-        <a href="pages/cake.html">
-            <img src="images/cake.jpg" width="500" height="500">
+        <a href="Recipe/pages/cake.html">
+            <img src="Recipe/images/cake.jpg" width="500" height="500">
         </a>
-        <a href="pages/noodles.html" >
-            <img src="images/noodles.jpg" width="500" height="500">
+        <a href="Recipe/pages/noodles.html" >
+            <img src="Recipe/images/noodles.jpg" width="500" height="500">
         </a>
     </div>
 </body>
