--- a/Recipe/pages/cake.html
+++ b/Recipe/pages/cake.html
@@ -116,6 +116,6 @@
         Return to Top
     </a>
     <br>
-    <a href="../index.html">Return to Home</a>
+    <a href="../../index.html">Return to Home</a>
 </body>
 </html>
