Alignment and background color

--- a/index.html
+++ b/index.html
@@ -9,19 +9,23 @@
 </head>
 <body>
     <style>
+        
         .alert {
             color: red;
+            background-color: yellow;
+            text-align: center;
         }
+        
     </style>
     <div id="middle" class="alert">
         <h1>Recipes</h1>
     </div>
     <div>
         <a href="Recipe/pages/cake.html">
-            <img src="Recipe/images/cake.jpg" width="500" height="500">
+            <img src="Recipe/images/cake.jpg" width="500" height="500" align="left">
         </a>
-        <a href="Recipe/pages/noodles.html" >
-            <img src="Recipe/images/noodles.jpg" width="500" height="500">
+        <a href="Recipe/pages/noodles.html">
+            <img src="Recipe/images/noodles.jpg" width="500" height="500" align="right">
         </a>
     </div>
 </body>
