Add cursive to noodles.html

--- a/Recipe/pages/noodles.html
+++ b/Recipe/pages/noodles.html
@@ -7,6 +7,12 @@
     <title>Noodles</title>
 </head>
 <body>
+    <style>
+        * {
+            font-family: cursive;
+        }
+
+    </style>
     <div>
         <h1 id="header">
             Noodles
